3B - SP - update style

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -36,7 +36,7 @@
 						<div class="search-box">
 							<div class="input-group">
 								<div class="search-control">
-									<input type="text" class="form-control" placeholder="Search Product, Brand...">
+									<input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm">
 								</div>
 								<span class="input-group-btn">
 									<button type="button" class="btn"><img src="../../assets/images/new-design/icons-svg/search.svg"></button>
@@ -94,7 +94,7 @@
 			<!-- BEGIN ADVANCE SEARCH -->
 			<div class="advance-search">
 				<!-- BEGIN SEARCH BY -->
-				<div class="search-by">
+				<!-- <div class="search-by">
 					<h4>Tìm kiếm theo</h4>
 					<div class="boxes">
 						<div class="by-store">
@@ -107,7 +107,7 @@
 						</div>
 					</div>
 					<button class="close"><i class="fa fa-close"></i></button>
-				</div>
+				</div> -->
 				<!-- /END SEARCH BY -->
 
 				<!-- BEGIN SEARCH HISTORY -->
@@ -432,106 +432,11 @@
 		</header>
 		<!-- /END HEADER -->
 
-		<!-- BEGIN FEATURED STORE -->
-		<div class="featured-store container">
-			<div class="title">
-				<h3><img src="../../assets/images/new-design/icons/store.png"> Cửa hàng nổi bật</h3>
-				<a href="store-featured.html">Xem tất cả <i class="fa fa-angle-right"></i></a>
-			</div>
-			<div class="boxes scroll-x">
-				<div class="box">
-					<div class="box-head">
-						<img class="box-img" src="../../assets/images/store-logo.png">
-						<h3><span class="wrap-line">Eshop</span></h3>
-						<a href="#">Xem Shop</a>
-					</div>
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div><!-- /end box -->
-				<div class="box">
-					<div class="box-head">
-						<img class="box-img" src="../../assets/images/store-logo.png">
-						<h3><span class="wrap-line">Tên Shop này đặt ra rất là dài chỉ để test</span></h3>
-						<a href="#">Xem Shop</a>
-					</div>
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div><!-- /end box -->
-				<div class="box">
-					<div class="box-head">
-						<img class="box-img" src="../../assets/images/store-logo.png">
-						<h3><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
-						<a href="#">Xem Shop</a>
-					</div>
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div><!-- /end box -->
-			</div><!-- /end boxes -->
-		</div>
-		<!-- /END FEATURED STORE -->
-
-		<div class="container">
-			<img class="ads" src="../../assets/images/new-design/ads-1.jpg">
-		</div><!-- /end ads -->
-
-		<!-- BEGIN FEATURED SEARCH -->
-		<div class="featured-search container">
-			<div class="title">
-				<h3><img src="../../assets/images/new-design/icons/flat-search.png"> Tìm kiếm nổi bật</h3>
-				<a href="#"><img src="../../assets/images/new-design/icons/union-2.png"> Xem thêm</a>
-			</div>
-			<div class="boxes scroll-x">
-				<div class="box">
-					<div class="box-head">
-						<h3 class="txt-center"><span class="wrap-line">Eshop</span></h3>
-					</div>
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div><!-- /end box -->
-				<div class="box">
-					<div class="box-head">
-						<h3 class="txt-center"><span class="wrap-line">Tên Shop này đặt ra rất là dài chỉ để test</span></h3>
-					</div>
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div><!-- /end box -->
-				<div class="box">
-					<div class="box-head">
-						<h3 class="txt-center"><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
-					</div>
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div><!-- /end box -->
-			</div><!-- /end boxes -->
-		</div>
-		<!-- /END FEATURED SEARCH -->
-
 		<!-- BEGIN HOT TODAY -->
 		<div class="hot-today container">
 			<div class="title">
-				<h3><img src="../../assets/images/new-design/icons/sun.png"> Hàng hot hôm nay</h3>
-				<a href="product-hot-today.html">Xem tất cả</a>
+				<h3><img src="../../assets/images/new-design/icons/medal.png"> Bán chạy</h3>
+				<a href="product-hot-today.html">Xem tất cả <i class="fa fa-angle-right"></i></a>
 			</div>
 
 			<!-- BEGIN LIST ITEM -->
@@ -578,11 +483,113 @@
 		</div>
 		<!-- /END HOT TODAY -->
 
+		<!-- BEGIN HOT TODAY -->
+		<div class="hot-today container">
+			<div class="title">
+				<h3><img src="../../assets/images/new-design/icons/tag.png"> Sale off</h3>
+				<a href="product-hot-today.html">Xem tất cả <i class="fa fa-angle-right"></i></a>
+			</div>
+
+			<!-- BEGIN LIST ITEM -->
+			<div class="list-item boxes scroll-x">
+				<!-- <div class="boxes"> -->
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img29.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">100,125,000 đ</h4>
+					</div>
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img30.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">800,000đ - 1,000,000đ</h4>
+					</div>
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img29.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">125,000 đ</h4>
+					</div>
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img30.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">100,800,000đ - 201,000,000đ</h4>
+					</div>
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img30.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">800,000đ - 1,000,000đ</h4>
+					</div>
+				<!-- </div> -->
+			</div>
+			<!-- /END LIST ITEM -->
+		</div>
+		<!-- /END HOT TODAY -->
+
+		<!-- BEGIN FEATURED SEARCH -->
+		<div class="featured-search container">
+			<div class="title">
+				<h3><img src="../../assets/images/new-design/icons/flat-search.png"> Tìm kiếm nổi bật</h3>
+				<a href="#"><img src="../../assets/images/new-design/icons/union-2.png"> Xem thêm</a>
+			</div>
+			<div class="boxes scroll-x">
+				<div class="box">
+					<div class="box-head">
+						<h3 class="txt-center"><span class="wrap-line">Đồng hồ thông minh</span></h3>
+					</div>
+					<ul class="box-items">
+						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
+					</ul>
+				</div><!-- /end box -->
+				<div class="box">
+					<div class="box-head">
+						<h3 class="txt-center"><span class="wrap-line">Tên Shop này đặt ra rất là dài chỉ để test</span></h3>
+					</div>
+					<ul class="box-items">
+						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
+					</ul>
+				</div><!-- /end box -->
+				<div class="box">
+					<div class="box-head">
+						<h3 class="txt-center"><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
+					</div>
+					<ul class="box-items">
+						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
+					</ul>
+				</div><!-- /end box -->
+				<div class="box">
+					<div class="box-head">
+						<h3 class="txt-center"><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
+					</div>
+					<ul class="box-items">
+						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
+						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
+					</ul>
+				</div><!-- /end box -->
+			</div><!-- /end boxes -->
+		</div>
+		<!-- /END FEATURED SEARCH -->
+
 		<!-- BEGIN RECOMMEND PRODUCTS -->
 		<div class="recommend-p container">
 			<div class="title">
 				<h3><img src="../../assets/images/new-design/icons/idea.png"> Gợi ý hôm nay</h3>
-				<a href="#">Xem tất cả</a>
+				<a href="#">Xem tất cả <i class="fa fa-angle-right"></i></a>
 			</div>
 			<div class="boxes wrap scroll-x">
 				<div class="box-p">
@@ -627,7 +634,6 @@
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price wrap-line w-break"></span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -655,7 +661,6 @@
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Ngắn vch</h4></a>
-								<span class="p-price wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -683,7 +688,6 @@
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Dài vừa vừa những cũng 2 dòng</h4></a>
-								<span class="p-price wrap-line w-break">1,089,000đ - 2,195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -712,7 +716,6 @@
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price wrap-line w-break">101.125.000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
