3B - PC - update style

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -602,6 +602,11 @@
 						<!-- /END PRODUCT ITEM -->
 					</div>
 					<!-- /END FLASH SALE -->
+
+					<div class="nav-list">
+						<a href="#" class="prev"><i class="fa fa-angle-left"></i></a>
+						<a href="#" class="next"><i class="fa fa-angle-right"></i></a>
+					</div>
 				</div>
 			</div>
 		</div>
