--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -26,12 +26,12 @@
 		<header>
 			<div class="header-top container">
 				<div class="row">
-					<div class="col-xs-2">
+					<div class="col-xs-3">
 						<!-- BEGIN LOGO -->
-						<h1 class="logo txt-center"><a href="index.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
+						<h1 class="logo txt-center"><a href="index.html"><img src="../../assets/images/new-design/icons/logo-3a.png"></a></h1>
 						<!-- /END LOGO -->
 					</div>
-					<div class="col-xs-7">
+					<div class="col-xs-6">
 						<!-- BEGIN SEARCH BOX -->
 						<div class="search-box">
 							<div class="input-group">
