3B - Admin update logo

--- a/3B-NEW/buyer-profile.html
+++ b/3B-NEW/buyer-profile.html
@@ -34,7 +34,7 @@
 
 			<a href="index.html" class="logo">
 				<span class="logo-mini"><b>3</b>B</span>
-				<span class="logo-lg"><b>Black</b>Best Buy</span>
+				<span class="logo-lg"><img src="assets/images/logo-3a.png"></span>
 			</a>
 
 			<nav class="navbar navbar-static-top">
