3B - update login design

--- a/3B-WEB/NEW_DESIGN/mobile/login-socials.html
+++ b/3B-WEB/NEW_DESIGN/mobile/login-socials.html
@@ -22,7 +22,7 @@
 
 	<div class="login-page sms">
 		<div class="title-page">
-			<h3><a href="login.html"><img src="../../assets/images/new-design/icons/back-arrow.png"></a> Register</h3>
+			<h3><a href="login.html"><img src="../../assets/images/new-design/icons-svg/back.svg"></a> Register</h3>
 		</div>
 
 		<div class="body">
