--- a/3B-WEB/NEW_DESIGN/mobile/login.html
+++ b/3B-WEB/NEW_DESIGN/mobile/login.html
@@ -22,12 +22,12 @@
 
 	<div class="login-page">
 		<div class="head">
-			<img src="../../assets/images/new-design/icons-svg/bg-login.svg">
+			<img src="../../assets/images/new-design/icons-svg/bg-login-2.svg">
 			
 		</div>
 
-		<div class="body">
-			<h3><img src="../../assets/images/new-design/logo-red.png"> Welcome!</h3>
+		<div class="body special">
+			<h3><span class="logo"><img src="../../assets/images/new-design/icons/logo-3a.png"></span> Welcome!</h3>
 
 			<div class="form-group">
 				<label>User name/ Email/ Phone number</label>
