--- a/3B-WEB/NEW_DESIGN/mobile/login-sms-verify.html
+++ b/3B-WEB/NEW_DESIGN/mobile/login-sms-verify.html
@@ -22,7 +22,7 @@
 
 	<div class="login-page sms">
 		<div class="title-page">
-			<h3><a href="login-sms.html"><img src="../../assets/images/new-design/icons/back-arrow.png"></a> Verify OTP</h3>
+			<h3><a href="login-sms.html"><img src="../../assets/images/new-design/icons-svg/back.svg"></a> Verify OTP</h3>
 		</div>
 
 		<div class="body">
