3B - update admin setting icon category

--- a/3B-NEW/admin-setting-icon-category.html
+++ b/3B-NEW/admin-setting-icon-category.html
@@ -528,25 +528,25 @@
 										<tr>
 											<td data-parent="parent" data-id="1" class="item-cat parent"><span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</span></td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 										<tr>
 											<td data-parent="parent" data-id="2" class="item-cat parent">Phụ kiện thời trang</td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 										<tr>
 											<td data-parent="parent" data-id="3" class="item-cat parent">Thời trang nam</td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 										<tr>
 											<td data-parent="parent" data-id="4" class="item-cat parent">Giày Dép</td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 									</tbody>
@@ -569,13 +569,13 @@
 										<tr>
 											<td data-parent="child1" data-id="5" class="item-cat child1"><span>Áo</span></td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 										<tr>
 											<td data-parent="child1" data-id="6" class="item-cat child1">Đầm</td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 									</tbody>
@@ -586,7 +586,7 @@
 										<tr>
 											<td data-parent="child1" data-id="7" class="item-cat child1"><span>Quần</span></td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 									</tbody>
@@ -610,7 +610,7 @@
 										<tr>
 											<td data-parent="child2" class="item-cat child2"><span>Đồng phục</span></td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 									</tbody>
@@ -621,7 +621,7 @@
 										<tr>
 											<td data-parent="child2" class="item-cat child2"><span>Cái gì đó</span></td>
 											<td>
-												<a href="#"><span class="badge bg-green"><i class="fa fa-plus"></i></span></a><!-- /END ADD BUTTON -->
+												<a href="#"><span class="badge bg-green width-auto">Chọn</span></a><!-- /END ADD BUTTON -->
 											</td>
 										</tr>
 									</tbody>
