3B - PC - update menu icons

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -46,7 +46,7 @@
 				<div class="row">
 					<div class="col-md-2 col-xs-2">
 						<!-- BEGIN LOGO -->
-						<h1 class="logo txt-center"><a href="../../index.html"><img src="../../assets/images/new-design/icons/logo-3a.png"></a></h1>
+						<h1 class="logo txt-center"><a href="../../index.html"><img src="../../assets/images/new-design/icons-svg/logo-havana.svg"></a></h1>
 						<!-- /END LOGO -->
 					</div>
 					<div class="col-md-8 col-xs-7">
@@ -243,8 +243,8 @@
 						</li>
 						<li>
 							<a href="view-product-by-category.html" class="custom-wrap-1line">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-1.svg"></span>
-								Nội Thất
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/saleoff.svg"></span>
+								Sale off
 							</a>
 							<div class="sub-menu">
 								<div class="item">
@@ -321,56 +321,56 @@
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-2.svg"></span>
-								Thời trang nữ
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/bong-tai.svg"></span>
+								Bông tai
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-3.svg"></span>
-								Thời trang nam
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/nhan.svg"></span>
+								Nhẫn
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-4.svg"></span>
-								Đồ lót
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/day-chuyen.svg"></span>
+								Dây chuyền
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-5.svg"></span>
-								Mẹ và bé
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/lac-vongtay.svg"></span>
+								Lắc và vòng tay
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-6.svg"></span>
-								Mỹ phẩm
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/tui-xach-nu.svg"></span>
+								Túi xách nữ
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-7.svg"></span>
-								Máy tính và laptop
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/kinh-mat.svg"></span>
+								Kính mắt
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-8.svg"></span>
-								Phụ kiện ôtô
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/nuoc-hoa.svg"></span>
+								Nước hoa
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-9.svg"></span>
-								Thực phẩm
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/giay-dep.svg"></span>
+								Giầy dép nữ
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-10.svg"></span>
-								Trái cây
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/secondhand.svg"></span>
+								Hàng secondhand
 							</a>
 						</li>
 					</ul>
@@ -383,76 +383,66 @@
 							</div>
 
 							<div class="featured">
+								<a href="#" class="prev"><i class="fa fa-angle-left"></i></a>
 								<ul>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/saleoff.png">
+											<img src="../../assets/images/new-design/icons/saleoff-2.png">
 											<!-- <div class="icon gio-vang"><img src="../../assets/images/new-design/icons-svg/gio-vang.svg"></div> -->
 											<span>Sale off</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/sale-le-size.png">
+											<img src="../../assets/images/new-design/icons/bong-tai.png">
 											<!-- <div class="icon sale-le-size"><img src="../../assets/images/new-design/icons-svg/sale-le-size.svg"></div> -->
-											<span>Sale lẻ size</span>
+											<span>Bông tai</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/thuong-hieu.png">
+											<img src="../../assets/images/new-design/icons/nhan.png">
 											<!-- <div class="icon thuong-hieu"><img src="../../assets/images/new-design/icons-svg/thuong-hieu.svg"></div> -->
-											<span>Thương hiệu</span>
+											<span>Nhẫn</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/from-1k.png">
+											<img src="../../assets/images/new-design/icons/vongco.png">
 											<!-- <div class="icon from-1k"><img src="../../assets/images/new-design/icons-svg/from-1k.svg"></div> -->
-											<span>From 1k</span>
+											<span>Dây chuyền</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/cua-hang-tot.png">
+											<img src="../../assets/images/new-design/icons/lac.png">
 											<!-- <div class="icon cua-hang-tot"><img src="../../assets/images/new-design/icons-svg/cua-hang-tot.svg"></div> -->
-											<span>Cửa hàng tốt</span>
+											<span>Lắc và vòng tay</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/thuc-pham.png">
+											<img src="../../assets/images/new-design/icons/tuixach.png">
 											<!-- <div class="icon thuc-pham"><img src="../../assets/images/new-design/icons-svg/thuc-pham.svg"></div> -->
-											<span>Thực phẩm</span>
+											<span>Túi sách nữ</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/trai-cay.png">
+											<img src="../../assets/images/new-design/icons/kinhmat.png">
 											<!-- <div class="icon trai-cay"><img src="../../assets/images/new-design/icons-svg/trai-cay.svg"></div> -->
-											<span>Trái cây</span>
+											<span>Kính mắt</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/phu-kien-oto.png">
+											<img src="../../assets/images/new-design/icons/nuochoa.png">
 											<!-- <div class="icon phu-kien-oto"><img src="../../assets/images/new-design/icons-svg/phu-kien-oto.svg"></div> -->
-											<span>Phụ kiện ô tô</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../../assets/images/new-design/icons/secondhand.png">
-											<span>Hàng cũ</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../../assets/images/new-design/icons/tools.png">
-											<span>Tiện ích</span>
+											<span>Nước hoa</span>
 										</a>
 									</li>
 								</ul>
+								<a href="#" class="next"><i class="fa fa-angle-right"></i></a>
 							</div>
 						</div>
 						<div class="col-md-2 hide-on-mobile">
