--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -237,13 +237,13 @@
 					<ul class="menu-container for-new-theme">
 						<li>
 							<a href="view-all-categories.html">
-								<span class="frame-icon"><img class="menu-icon" src="../../assets/images/new-design/icons/nav.png"></span>
+								<span class="frame-icon"><img class="menu-icon" src="../../assets/images/new-design/icons_cat/png/nav-menu.png"></span>
 								Danh Mục
 							</a>
 						</li>
 						<li>
 							<a href="view-product-by-category.html" class="custom-wrap-1line">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/saleoff.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/saleoff.png"></span>
 								Sale off
 							</a>
 							<div class="sub-menu">
@@ -321,55 +321,55 @@
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/bong-tai.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/bong-tai.png"></span>
 								Bông tai
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/nhan.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/nhan.png"></span>
 								Nhẫn
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/day-chuyen.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/day-chuyen.png"></span>
 								Dây chuyền
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/lac-vongtay.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/lac.png"></span>
 								Lắc và vòng tay
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/tui-xach-nu.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/tui-xach.png"></span>
 								Túi xách nữ
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/kinh-mat.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/kinh-mat.png"></span>
 								Kính mắt
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/nuoc-hoa.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/nuoc-hoa.png"></span>
 								Nước hoa
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/giay-dep.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/giay-dep.png"></span>
 								Giầy dép nữ
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/secondhand.svg"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/secondhand.png"></span>
 								Hàng secondhand
 							</a>
 						</li>
