3B - update icons category

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -237,13 +237,13 @@
 					<ul class="menu-container for-new-theme">
 						<li>
 							<a href="view-all-categories.html">
-								<span class="frame-icon"><img class="menu-icon" src="../../assets/images/new-design/icons_cat/png/nav-menu.png"></span>
+								<span class="frame-icon"><img class="menu-icon" src="../../assets/images/new-design/icons_cat/sidebar/nav-menu.png"></span>
 								Danh Mục
 							</a>
 						</li>
 						<li>
 							<a href="view-product-by-category.html" class="custom-wrap-1line">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/saleoff.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/saleoff.png"></span>
 								Sale off
 							</a>
 							<div class="sub-menu">
@@ -321,55 +321,55 @@
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/bong-tai.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/bong-tai.png"></span>
 								Bông tai
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/nhan.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/nhan.png"></span>
 								Nhẫn
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/day-chuyen.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/day-chuyen.png"></span>
 								Dây chuyền
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/lac.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/lac.png"></span>
 								Lắc và vòng tay
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/tui-xach.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/tui-xach.png"></span>
 								Túi xách nữ
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/kinh-mat.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/kinh-mat.png"></span>
 								Kính mắt
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/nuoc-hoa.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/nuoc-hoa.png"></span>
 								Nước hoa
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/giay-dep.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/giay-dep.png"></span>
 								Giầy dép nữ
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/png/secondhand.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons_cat/sidebar/secondhand.png"></span>
 								Hàng secondhand
 							</a>
 						</li>
@@ -394,51 +394,58 @@
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/bong-tai.png">
+											<img src="../../assets/images/new-design/icons_cat/main/bong-tai.png">
 											<!-- <div class="icon sale-le-size"><img src="../../assets/images/new-design/icons-svg/sale-le-size.svg"></div> -->
 											<span>Bông tai</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/nhan.png">
+											<img src="../../assets/images/new-design/icons_cat/main/nhan.png">
 											<!-- <div class="icon thuong-hieu"><img src="../../assets/images/new-design/icons-svg/thuong-hieu.svg"></div> -->
 											<span>Nhẫn</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/vongco.png">
+											<img src="../../assets/images/new-design/icons_cat/main/day-chuyen.png">
 											<!-- <div class="icon from-1k"><img src="../../assets/images/new-design/icons-svg/from-1k.svg"></div> -->
 											<span>Dây chuyền</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/lac.png">
+											<img src="../../assets/images/new-design/icons_cat/main/lac.png">
 											<!-- <div class="icon cua-hang-tot"><img src="../../assets/images/new-design/icons-svg/cua-hang-tot.svg"></div> -->
 											<span>Lắc và vòng tay</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/tuixach.png">
+											<img src="../../assets/images/new-design/icons_cat/main/tui-xach.png">
 											<!-- <div class="icon thuc-pham"><img src="../../assets/images/new-design/icons-svg/thuc-pham.svg"></div> -->
 											<span>Túi sách nữ</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/kinhmat.png">
+											<img src="../../assets/images/new-design/icons_cat/main/kinh-mat.png">
 											<!-- <div class="icon trai-cay"><img src="../../assets/images/new-design/icons-svg/trai-cay.svg"></div> -->
 											<span>Kính mắt</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/nuochoa.png">
+											<img src="../../assets/images/new-design/icons_cat/main/nuoc-hoa.png">
 											<!-- <div class="icon phu-kien-oto"><img src="../../assets/images/new-design/icons-svg/phu-kien-oto.svg"></div> -->
 											<span>Nước hoa</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<img src="../../assets/images/new-design/icons_cat/main/phu-kien-khac.png">
+											<!-- <div class="icon phu-kien-oto"><img src="../../assets/images/new-design/icons-svg/phu-kien-oto.svg"></div> -->
+											<span>Phụ kiện khác</span>
 										</a>
 									</li>
 								</ul>
