3B - PC - update style

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -658,8 +658,30 @@
 		<!-- HOT TODAY -->
 		<div class="hot-today second margin-b20 hide-on-mobile">
 			<div class="content-wrapper container">
-				<div class="head-title">
-					<h3 class="txt_upercase"><img src="../../assets/images/new-design/icons/bg-title-3.png"></h3>
+				<div class="head-title custom-head-title">
+					<h3 class="txt_upercase">
+						<svg class="fireAnimation-2 icon" width="50" height="62" viewBox="0 0 50 62" xmlns="http://www.w3.org/2000/svg">
+						<style type="text/css">
+							.st0{fill:url(#SVGID_1_);}
+							.st1{fill:url(#SVGID_2_);}
+						</style>
+						<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="271.925" y1="-133.3589" x2="271.925" y2="-196.1069" gradientTransform="matrix(1 0 0 -1 -246 -134.8085)">
+							<stop  offset="0" style="stop-color:#EF9F2D"/>
+							<stop  offset="1" style="stop-color:#E52E25"/>
+						</linearGradient>
+						<path class="st0" d="M22.26,20.8c3.09-6.01,4.29-11.43,3.09-17.04c7.3,1.28,13.57,7.89,16.61,13.63c3.27,7.54-1.36,18.38-4.08,22.85
+							c6.73-3.53,8.09-12.3,7.93-16.24c5.38,9.14,0,19.85-2.4,26.26C39.55,58.29,28.18,60.3,23.7,60.3c-8.26,0-14.34-5.01-17.3-8.42
+							c-6.73-10.1,0-25.46,12.25-35.88C18.46,19.52,20.98,20.67,22.26,20.8z"/>
+						<linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="274.3565" y1="-146.4736" x2="274.3565" y2="-193.6985" gradientTransform="matrix(1 0 0 -1 -246 -134.8085)">
+							<stop  offset="0" style="stop-color:#FECF07"/>
+							<stop  offset="1" style="stop-color:#FECF07;stop-opacity:0.32"/>
+						</linearGradient>
+						<path class="st1" d="M18.68,33.94c9.5-4.66,10.24-21.67,9.99-22.28c8.38,4.54,8.77,16.61,5.61,22.28
+							c-3.17,5.67-3.01,9.59-1.95,12.35c6.43-0.32,9.91-6.35,11.45-10.33c0.49,4.46-1.46,12.35-7.56,18.84
+							c-7.39,7.86-19.5,1.22-21.69-2.63C12.35,48.32,11.08,37.67,18.68,33.94z"/>
+						</svg>
+						Bán chạy
+					</h3>
 				</div>
 				<div class="scroll-on-mobile">
 					<div class="row">
