3B - PC - update socials topbar

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -37,6 +37,11 @@
 					<li><a href="#">Đăng ký</a></li>
 					<li><a href="#">Đăng nhập</a></li>
 					<li><a href="#"><img src="../../assets/images/img29.jpg"><h5 class="wrap-line">Tên sử dụng siêu dài</h5></a><span class="margin-r8">/</span><a href="#">Đăng xuất</a></li>
+					<li>
+						Kết nối
+						<a class="topbar-social" href="#"><i class="fa fa-facebook-official"></i></a>
+						<a class="topbar-social" href="#"><i class="fa fa-instagram"></i></a>
+					</li>
 				</ul>
 			</div>
 			<!-- /END TOP NAV -->
