3B - PC - test icon fire gif 2

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -479,7 +479,10 @@
 						<h3>
 							<span>
 								<img src="../../assets/images/new-design/icons/fire_gif.gif">
-							</span> 
+							</span>
+							<span>
+								<img src="../../assets/images/new-design/icons/fire_gif_v2.gif">
+							</span>
 							Giờ vàng giá tốt
 						</h3>
 						<span class="flash-time">
