3B - update fav icon

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -10,7 +10,8 @@
 	<meta name="keywords" content="design, html, css, responsive, template.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Tungvt">
-	<link rel="icon" type="favicon" href="/favicon.gif">
+	<!-- <link rel="icon" type="favicon" href="../../assets/images/new-design/icons/logo-havana_grad.png"> -->
+	<link rel="icon" type="favicon" href="../../assets/images/new-design/icons/logo-havana_grad_32x32.png">
 
 	<link rel="stylesheet" type="text/css" href="../../assets/base/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/base/bootstrap.min.css">
