--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -400,6 +400,13 @@
 									</li>
 									<li>
 										<a href="#">
+											<img src="../../assets/images/new-design/icons_cat/main/good_shop.png">
+											<!-- <div class="icon sale-le-size"><img src="../../assets/images/new-design/icons-svg/sale-le-size.svg"></div> -->
+											<span>Cửa hàng tốt</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
 											<img src="../../assets/images/new-design/icons_cat/main/bong-tai.png">
 											<!-- <div class="icon sale-le-size"><img src="../../assets/images/new-design/icons-svg/sale-le-size.svg"></div> -->
 											<span>Bông tai</span>
