--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -639,7 +639,7 @@
 			<div class="content-wrapper container">
 				<div class="head-title custom-head-title">
 					<h3 class="txt_upercase">
-						<svg class="fireAnimation-2 icon" width="50" height="62" viewBox="0 0 50 62" xmlns="http://www.w3.org/2000/svg">
+						<!-- <svg class="fireAnimation-2 icon" width="50" height="62" viewBox="0 0 50 62" xmlns="http://www.w3.org/2000/svg">
 						<style type="text/css">
 							.st0{fill:url(#SVGID_1_);}
 							.st1{fill:url(#SVGID_2_);}
@@ -658,7 +658,8 @@
 						<path class="st1" d="M18.68,33.94c9.5-4.66,10.24-21.67,9.99-22.28c8.38,4.54,8.77,16.61,5.61,22.28
 							c-3.17,5.67-3.01,9.59-1.95,12.35c6.43-0.32,9.91-6.35,11.45-10.33c0.49,4.46-1.46,12.35-7.56,18.84
 							c-7.39,7.86-19.5,1.22-21.69-2.63C12.35,48.32,11.08,37.67,18.68,33.94z"/>
-						</svg>
+						</svg> -->
+						<img class="icon" src="../../assets/images/new-design/icons/fire2_gif.gif">
 						Bán chạy
 					</h3>
 				</div>
